--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.3.3",
     "date-formatter": "^0.1.1",
     "express": "^4.13.3",
+    "formidable": "^1.0.17",
     "glob": "^6.0.4",
+    "http": "0.0.0",
     "jade": "^1.11.0",
     "method-override": "^2.3.0",
     "moment-format": "^1.2.8",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
-    "serve-favicon": "^2.3.0"
+    "multiparty": "^4.1.2",
+    "serve-favicon": "^2.3.0",
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
