--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.3.3",
     "date-formatter": "^0.1.1",
     "express": "^4.13.3",
+    "express-session": "^1.13.0",
     "formidable": "^1.0.17",
     "glob": "^6.0.4",
     "http": "0.0.0",
